src/pages/components/SearchBar/SearchBar.css
.search-bar {
    width: 100%;
    height: 15vh;
    border-bottom: 1px solid gainsboro;
  }

  .IU-logo {
    width: 120px;
    height: auto;
    position: relative;
    left: 100px;
    top: 15px;
  }
  
  .nav-wrapper {
    display: inline;
    position: absolute;
    right: 10%;
    top: 5%;
  }

